--- a/about.css
+++ b/about.css
@@ -4,7 +4,7 @@ body{
     padding: 0px}
 .card {
     width: 100%;
-    height: 300px;
+    height: 500px;
     background: lavender;
     display: flex;
     gap: 5px;
@@ -52,5 +52,28 @@ body{
     padding: 10px;
     cursor: pointer;
 }
+.about-h2{
+    text-align: center;
+    margin-top: 35px;
+    color: #c76b00;
+    text-transform: uppercase;
+}
+.about-1{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
 
+.about-each{
+    width: 25%;
+    min-height: 45% ;
+    border-radius: 5px;
+    margin: 25px;
+    padding: 15px;
+    text-align: center;
+    border: darkgreen 1px solid;
+    line-height: 30px;
+
+}
 
